2.8_the_project_step11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-step11
  namespace: project
  labels:
    name: project-step11
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: project-step11
  template:
    metadata:
      name: project-step11
      labels:
        name: project-step11
        version: v1
    spec:
      containers:
        - name: project-step11
          image: project-step11:v1
